--- a/book/_static/tippy_custom.css
+++ b/book/_static/tippy_custom.css
@@ -1,16 +1,30 @@
-/* has-tippy wird in _conf.yml konfiguriert */
+/* Verhindern, dass Emojis in Tooltip- und Wikipedia-Links mit unterstrichen werden */
+.has-tippy > ::before,
+a[href*="wikipedia"]::before {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.has-tippy > * {
+  white-space: nowrap; /* Icon soll bei Link bleiben, steht sonst mal alleine */
+}
+
+/* Links zu Wikipedia */
+a[href*="wikipedia"]::before {
+  content: "🌐";
+}
+
+/* Links zu anderen internen Seiten {doc} */
 .has-tippy .doc::before {
   content: "📑";
 }
 
+/* Links zu Glossar-Einträgen {term} */
 .has-tippy .std-term::before {
   content: "🔎";
 }
 
-.has-tippy > * {
-  white-space: nowrap;
-}
-
-a[href*="wikipedia"]::before {
-  content: "🌐";
+/* Links zu sonstigen internen Verlinkungen {ref} oder []() */
+.has-tippy .std-ref::before {
+  content: "🔗";
 }
